--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
   },
   "dependencies": {
     "chess-moments": "^1.2.2",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "markdown-to-jsx": "^7.7.10",
     "merge-class-names": "^1.4.2",
-    "next-chessground": "^1.2.0"
+    "next-chessground": "^1.3.0"
   },
   "peerDependencies": {
     "react": "^17 || ^18",
@@ -44,6 +44,7 @@
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-url": "^6.1.0",
     "eslint": "^7.25.0",
     "eslint-plugin-react": "^7.23.2",
