--- a/examples/package.json
+++ b/examples/package.json
@@ -15,10 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "chess-moments": "^1.1.3",
+    "delay": "^6.0.0",
     "merge-class-names": "^1.4.2",
     "next": "^14.2.25",
     "next-chessground": "^1.0.0",
-    "next-pgn-viewer": "^0.4.4",
+    "next-pgn-viewer": "file:../next-pgn-viewer-0.4.7.tgz",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "store2": "^2.14.4",
